[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
dialoguer = "0.11.0"
dialoguer_parser_derive = { path = ".." }

[[bin]]
name = "basic"
path = "basic/main.rs"

[[bin]]
name = "optional_fields"
path = "optional_fields/main.rs"
